raw/ADY NUGRAHA SAPUTRA RAJJA 6431 245150207111055/2024-11-14-08-13-48.ceg/compilation.txt
NT.java:30: error: class, interface, enum, or record expected
    public static void main(String[] args) {
                  ^
NT.java:32: error: class, interface, enum, or record expected
        tambah(input[1]);
        ^
NT.java:33: error: class, interface, enum, or record expected
        kurang(input[2]);
        ^
NT.java:34: error: class, interface, enum, or record expected
        kali(input[3]);
        ^
NT.java:35: error: class, interface, enum, or record expected
        bagi(input[4]);
        ^
NT.java:36: error: class, interface, enum, or record expected
        output(akhir());
        ^
NT.java:37: error: class, interface, enum, or record expected
    }
    ^
7 errors
Not compiled
